--- a/client/assets/scss/main.scss
+++ b/client/assets/scss/main.scss
@@ -1,4 +1,5 @@
 @import "~bulma/sass/utilities/_all";
+$bulmaswatch-import-font: false;
 @import "node_modules/bulmaswatch/darkly/_variables.scss";
 
 :root {
@@ -84,9 +85,16 @@ $link: $primary;
 $link-invert: $primary-invert;
 $link-focus-border: $primary;
 
+$scheme-main: $primary;
+$navbar-dropdown-background-color: $primary;
+
+$family-primary: 'Poppins', sans-serif!important;
+
 @import "~bulma";
 @import "~buefy/src/scss/buefy";
 @import "node_modules/bulmaswatch/darkly/_overrides.scss";
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400&display=swap');
 
 .textarea, .input {
   background-color: $grey-lightest;
